MDEV-17414: MyROCKS order desc limit 1 fails

- Use the correct range bounds when doing a reverse-ordered range scan
  (this was already done for HA_READ_PREFIX_LAST_OR_PREV but not for
  HA_READ_BEFORE_KEY).